final_test_output_2.txt
PASS src/lib/cache.test.ts
  CacheService
     should set and get values (18 ms)
     should return null for non-existent keys (1 ms)
     should return null for expired keys (2 ms)
     should handle namespaced clearing (2 ms)
     should clear everything when no namespace is provided (2 ms)
     should get or fetch correctly (3 ms)
     should fetch again after expiration in getOrFetch (1 ms)

PASS src/ai/flows/automated-maintenance-response-drafts.test.ts
  Maintenance Response AI Flow
     should generate a response for valid input (16 ms)
     should throw error if AI generation fails (11 ms)

FAIL src/app/actions.test.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\USER\Music\WEBSITES\studio-1\node_modules\jsonpath-plus\dist\index-browser-esm.js:2158
    export { JSONPath };
    ^^^^^^

    SyntaxError: Unexpected token 'export'

    

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.<anonymous> (node_modules/@genkit-ai/google-genai/src/common/converters.ts:26:26)
      at Object.<anonymous> (node_modules/@genkit-ai/google-genai/src/common/utils.ts:28:40)
      at Object.<anonymous> (node_modules/@genkit-ai/google-genai/src/googleai/index.ts:25:31)
      at Object.<anonymous> (node_modules/@genkit-ai/google-genai/src/index.ts:24:8)
      at Object.<anonymous> (src/ai/genkit.ts:12:22)
      at Object.<anonymous> (src/ai/flows/automated-maintenance-response-drafts.ts:12:17)
      at Object.<anonymous> (src/app/actions.ts:28:45)
      at Object.<anonymous> (src/app/actions.test.ts:10:18)

Test Suites: 1 failed, 2 passed, 3 total
Tests:       9 passed, 9 total
Snapshots:   0 total
Time:        7.172 s
Ran all test suites matching /src\\lib\\cache.test.ts|src\\app\\actions.test.ts|src\\ai\\flows\\automated-maintenance-response-drafts.test.ts/i.
